--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "PWA",
-    "short_name": "PWA",
+    "name": "Amrita PWA",
+    "short_name": "Amrita PWA",
     "start_url": "./index.html",
-    "description": "PWA",
+    "description": "PWA for Amrita",
     "display": "standalone",
     "orientation": "portrait-primary",
     "background_color": "#ffffff",
